# voicetyper

./: .gitignore  AGENTS.md  README.md  pyproject.toml  test
scripts/: install_tray.sh  voicetyper-tray.sh
voicetyper/: __init__.py  __main__.py  config.py  controller.py  logging_utils.py  main.py  tray.py
voicetyper/audio/: capture.py  devices.py  vad.py
voicetyper/output/: __init__.py  xdotool.py
voicetyper/stt/: base.py  speechmatics_client.py
voicetyper/ui/: terminal.py
